@@ -1,3 +1,13 @@
+2013-06-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/config_dialog.cpp:
+	* src/config_dialog.h:
+	* src/edit_canvas.cpp:
+	* src/main_window.cpp:
+	* src/options.cpp:
+	* src/options.h:
+	- フィールド描画のスケールをコンフィグダイアログ上で設定できるように機能追加
+
 2013-06-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/config_dialog.cpp:
